--- a/SmartDart/SmartDart.vcxproj
+++ b/SmartDart/SmartDart.vcxproj
@@ -77,12 +77,43 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>/usr/local/include/opencv4</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
+    <IncludePath>/usr/local/include/opencv4</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
+    <IncludePath>/usr/local/include/opencv4</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <IncludePath>/usr/local/include/opencv4</IncludePath>
+  </PropertyGroup>
   <ItemGroup>
+    <ClCompile Include="HSVTrackbar.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ScalarTrackbar.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HSVTrackbar.h" />
+    <ClInclude Include="ScalarTrackbar.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Link>
+      <LibraryDependencies>opencv_core;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_video;opencv_videoio;pthread;jpeg;gcc_s;stdc++;tbb;rt;dl;m;z;png16;c;%(LibraryDependencies)</LibraryDependencies>
+      <SharedLibrarySearchPath>/usr/lib/x86_64-linux-gnu/;/usr/lib/gcc/x86_64-linux-gnu/7;/usr/local/lib;/lib/x86_64-linux-gnu/;%(SharedLibrarySearchPath);%(Link.SharedLibrarySearchPath)</SharedLibrarySearchPath>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
+    <Link>
+      <LibraryDependencies>opencv_core;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_video;opencv_videoio;pthread;jpeg;gcc_s;stdc++;tbb;rt;dl;m;z;png16;c;%(LibraryDependencies)</LibraryDependencies>
+      <SharedLibrarySearchPath>/usr/lib/x86_64-linux-gnu/;/usr/lib/gcc/x86_64-linux-gnu/7;/usr/local/lib;/lib/x86_64-linux-gnu/;%(SharedLibrarySearchPath);%(Link.SharedLibrarySearchPath)</SharedLibrarySearchPath>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
+    <Link>
+      <LibraryDependencies>opencv_core;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_video;opencv_videoio;pthread;jpeg;gcc_s;stdc++;tbb;rt;dl;m;z;png16;c;%(LibraryDependencies)</LibraryDependencies>
+      <SharedLibrarySearchPath>/usr/lib/x86_64-linux-gnu/;/usr/lib/gcc/x86_64-linux-gnu/7;/usr/local/lib;/lib/x86_64-linux-gnu/;%(SharedLibrarySearchPath);%(Link.SharedLibrarySearchPath)</SharedLibrarySearchPath>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <Link>
       <LibraryDependencies>opencv_core;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_video;opencv_videoio;pthread;jpeg;gcc_s;stdc++;tbb;rt;dl;m;z;png16;c;%(LibraryDependencies)</LibraryDependencies>
       <SharedLibrarySearchPath>/usr/lib/x86_64-linux-gnu/;/usr/lib/gcc/x86_64-linux-gnu/7;/usr/local/lib;/lib/x86_64-linux-gnu/;%(SharedLibrarySearchPath);%(Link.SharedLibrarySearchPath)</SharedLibrarySearchPath>
