--- a/SmartDart/SmartDart.vcxproj.filters
+++ b/SmartDart/SmartDart.vcxproj.filters
@@ -8,11 +8,18 @@
     <ClCompile Include="HSVTrackbar.cpp">
       <Filter>ScalarTrackbar</Filter>
     </ClCompile>
-    <ClCompile Include="ShapeDetect.cpp" />
+    <ClCompile Include="WindowHelper.cpp" />
+    <ClCompile Include="ImageStacker.cpp" />
+    <ClCompile Include="DartAreas.cpp">
+      <Filter>DartArea</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ScalarTrackbar">
       <UniqueIdentifier>{f8b63630-83b7-4f2b-8c32-04bab4cb6d1c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DartArea">
+      <UniqueIdentifier>{f79976c3-0ba7-4b51-85ad-cf933526fb5f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -22,6 +29,10 @@
     <ClInclude Include="HSVTrackbar.h">
       <Filter>ScalarTrackbar</Filter>
     </ClInclude>
-    <ClInclude Include="ShapeDetect.h" />
+    <ClInclude Include="WindowHelper.h" />
+    <ClInclude Include="ImageStacker.h" />
+    <ClInclude Include="DartAreas.h">
+      <Filter>DartArea</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
