--- a/SmartDart/SmartDart.vcxproj
+++ b/SmartDart/SmartDart.vcxproj
@@ -89,17 +89,21 @@
   <ItemGroup>
     <ClCompile Include="Automation.cpp" />
     <ClCompile Include="DartAreas.cpp" />
+    <ClCompile Include="Dartboard.cpp" />
     <ClCompile Include="HSVTrackbar.cpp" />
     <ClCompile Include="ImageStacker.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PointHelper.cpp" />
     <ClCompile Include="ScalarTrackbar.cpp" />
     <ClCompile Include="WindowHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Automation.h" />
     <ClInclude Include="DartAreas.h" />
+    <ClInclude Include="DartBoard.h" />
     <ClInclude Include="HSVTrackbar.h" />
     <ClInclude Include="ImageStacker.h" />
+    <ClInclude Include="PointHelper.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="ScalarTrackbar.h" />
     <ClInclude Include="Types.h" />
