Testing and Optimizing

--- a/SmartDart/SmartDart.vcxproj
+++ b/SmartDart/SmartDart.vcxproj
@@ -86,6 +86,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <IncludePath>/usr/local/include/opencv4</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
+    <IncludePath>/usr/local/include/opencv4</IncludePath>
+  </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="Automation.cpp" />
     <ClCompile Include="DartAreaName.cpp" />
@@ -134,6 +137,11 @@
     <Link>
       <LibraryDependencies>opencv_core;opencv_photo;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_video;opencv_videoio;pthread;jpeg;gcc_s;stdc++;tbb;rt;dl;m;z;png16;c;%(LibraryDependencies)</LibraryDependencies>
       <SharedLibrarySearchPath>/usr/lib/x86_64-linux-gnu/;/usr/lib/gcc/x86_64-linux-gnu/7;/usr/local/lib;/lib/x86_64-linux-gnu/;%(SharedLibrarySearchPath);%(Link.SharedLibrarySearchPath)</SharedLibrarySearchPath>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
+    <Link>
+      <LibraryDependencies>opencv_core;opencv_photo;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_video;opencv_videoio;pthread;raspicam;raspicam_cv;jpeg;gcc_s;stdc++;tbb;rt;dl;m;z;png16;c;%(LibraryDependencies)</LibraryDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
